# YT_essay_Gen

./: .env.example  .gitignore  CLAUDE.md  README.md  Spec.md  config.yaml  pyproject.toml
src/essaygen/: cli.py  config.py
src/essaygen/assembly/: captions.py  ffmpeg_ops.py  thumbnail.py
src/essaygen/core/: errors.py  fallback_chain.py  project.py  retry.py  runner.py  state.py
src/essaygen/models/: insight.py  research.py  script.py  stance.py
src/essaygen/providers/image/: base.py  cloudflare_sdxl.py  (+2 more)
src/essaygen/stages/: stage01_research.py  stage02_stance.py  stage03_script.py  stage04a_tts.py  stage04b_image_gen.py  stage05_section_build.py  stage06_final_merge.py
tests/unit/: test_captions.py  test_cli.py  test_cloudflare_sdxl_provider.py  test_config.py  test_errors.py  test_fallback_chain.py  test_ffmpeg_ops.py  test_freesound_provider.py  test_insight_model.py  test_llm_parsing.py  test_llm_provider.py  test_local_flux_provider.py  test_music_bed_provider.py  test_music_judge.py  test_music_query.py  test_nano_banana_provider.py  test_pexels_provider.py  test_pixabay_provider.py  test_pocket_tts_provider.py  test_project.py  test_research_model.py  test_retry.py  test_runner.py  test_script_model.py  test_stage01_research.py  test_stage02_stance.py  test_stage03_script.py  test_stage04a_tts.py  test_stage04b_image_gen.py  test_stage05_section_build.py  test_stage06_final_merge.py  test_stance_model.py  test_state.py  test_stock_judge.py  test_stock_photo_provider.py  test_thumbnail_hook.py  test_thumbnail_render.py  test_wikipedia_client.py
(+16 files in other folders)
