[project]
name = "essaygen"
version = "0.1.0"
description = "Automated video essay pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "typer>=0.12",
    "httpx>=0.27",
    "google-genai>=0.3",
    "mistralai>=1.0",
    "pocket-tts>=0.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
# local_flux is a rare last-resort image-gen tier; kept out of the base
# install since it may need build tools and isn't needed for the happy path
flux = [
    "stable-diffusion-cpp-python>=0.1",
]

[project.scripts]
pipeline = "essaygen.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
